# racecar_ros

./: README.md
racecar-ros2/: .clang-format  .gitignore  Dockerfile  README.md  build.sh  gro830-lab.txt
racecar-ros2/.devcontainer/: Dockerfile.dev  devcontainer.json
racecar-ros2/.github/workflows/: CI.yml
racecar-ros2/doc/: README.md  gro830-lab-a25.md  the_book_of_secret_knowledge.md
racecar-ros2/images/: README.md  setup_rpi5_ubuntu2404_jazzy.bash  setup_vm_ubuntu2204_humble.bash  setup_vm_ubuntu2404_jazzy.bash
racecar-ros2/racecar_arduino/Controller/: platformio.ini
racecar-ros2/racecar_autopilot/racecar_autopilot/: rosbag2csv.py  slash_controller.py  wall_estimator.py
racecar-ros2/racecar_beacon/: package.xml  setup.py
racecar-ros2/racecar_beacon/racecar_beacon/: lab_chat_client.py  lab_chat_server.py  lab_poll_pos.py  remote_client.py  ros_monitor.py  utils.py  vehicle_tracker.py
racecar-ros2/racecar_behaviors/launch/: behaviors.launch.py  blob_detection.launch.py
racecar-ros2/racecar_behaviors/racecar_behaviors/: blob_detector.py  labo_brushfire.py
racecar-ros2/racecar_bringup/: package.xml  setup.py
racecar-ros2/racecar_bringup/launch/: GRO520.launch.py  GRO525.launch.py  GRO830.launch.py  autopilot.launch.py  basic_control.launch.py  bringup.launch.py  rviz.launch.py  teleop.launch.py
racecar-ros2/racecar_bringup/racecar_bringup/: arduino_sensors.py  cmd_vel_arbitration.py
racecar-ros2/racecar_description/config/: ros_bridge.yaml
racecar-ros2/racecar_description/urdf/: racecar.gazebo  racecar.xacro
racecar-ros2/racecar_gazebo/: package.xml
racecar-ros2/racecar_gazebo/launch/: simulation.launch.py  spawn_racecar.launch.py
racecar-ros2/racecar_gazebo/worlds/: racecar_tunnel_genie.world
racecar-ros2/racecar_navigation/: package.xml  setup.py
racecar-ros2/racecar_navigation/launch/: kalmanFilter.launch.py  navigation.launch.py  navigation_stack.launch.py  rviz.launch.py  slam.launch.py
racecar-ros2/racecar_navigation/resource/: bringup.rviz  dual_ekf_params.yaml  nav2_params.yaml  (+1 more)
racecar-ros2/racecar_serial/pb2roscpp/: CMakeLists.txt  README.md  package.xml
racecar-ros2/racecar_serial/pb2roscpp/src/: floatarray.pb.c  floatarray.pb.cc  floatarray.pb.h  floatarray.proto  pb.h  pb2roscpp.cpp  pb_common.c  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
racecar-ros2/racecar_web_interface/: index.html  links.html
(+22 files in other folders)
