<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pb2roscpp</name>
  <version>0.0.0</version>
  <description>Package for generating and encoding/decoding Protobuf messages for serial
    communication with the racecar's Arduino</description>
  <maintainer email="txguimont@gmail.com">Thomas-Xavier Guimont</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>serial</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>